[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-tracker"
version = "0.1.0"
description = "Track and manage third-party Claude Code skills from GitHub"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
skill-tracker = "skill_tracker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["skill_tracker"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
